--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1064,7 +1064,17 @@ body {
         width: 100%;
         grid-template-rows: none;
         /*grid-template-columns: repeat(3, 1fr);*/
-        grid-template-columns: 2fr 3fr 4fr;
+        grid-template-columns: 3fr 3fr 4fr;
+        gap: 5px;
+        margin-bottom: 20px;
+    }
+
+    .form-row.fourtotwo {
+        display: grid;
+        width: 100%;
+        grid-template-rows: none;
+        /*grid-template-columns: repeat(3, 1fr);*/
+        grid-template-columns: 4fr 4fr 3fr;
         gap: 5px;
         margin-bottom: 20px;
     }
